test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/invalid_subcommand_with_usage.stderr
error: custom attribute panicked
 --> $DIR/invalid_subcommand_with_usage.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: `with_usage` must be a string literal
